--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shopify/prettier-plugin-liquid": "^1.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
@@ -30,6 +31,8 @@
     "postcss-import": "^16.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.1",
     "vite-plugin-shopify": "^3.0.0"
