set up shadcn/ui

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
   "[liquid]": {
     "editor.formatOnSave": true
   },
-  "prettier.documentSelectors": ["**/*.liquid"]
+  "prettier.documentSelectors": [
+    "**/*.liquid"
+  ],
+  "workbench.colorTheme": "Kimbie Dark"
 }
