--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "shopify:deploy": "shopify theme push"
   },
   "devDependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@shopify/prettier-plugin-liquid": "^1.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.12.6",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
@@ -38,6 +42,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "sass": "^1.74.1",
     "sort-by": "^1.2.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
