set up tailwindcss

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write --cache .",
     "vite:dev": "vite",
     "shopify:dev": "shopify theme dev",
-    "shopify:deploy": "shopify theme push"
+    "shopify:deploy": "shopify theme push",
+    "watch-tailwind": "tailwindcss -i ./frontend/styles/tailwind-input.scss -o ./frontend/styles/tailwind-output.css --watch"
   },
   "devDependencies": {
     "@radix-ui/react-slot": "^1.0.2",
@@ -48,5 +49,11 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.1",
     "vite-plugin-shopify": "^3.0.0"
+  },
+  "dependencies": {
+    "@radix-ui/react-toggle": "^1.0.3",
+    "lucide-react": "^0.366.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
