--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
   },
   "dependencies": {
     "@radix-ui/react-toggle": "^1.0.3",
+    "@reduxjs/toolkit": "^2.2.3",
     "framer-motion": "^11.0.27",
     "lucide-react": "^0.366.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-use": "^17.5.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
