--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.1",
-    "vite-plugin-shopify": "^3.0.0"
+    "vite-plugin-shopify": "^3.0.0",
+    "vite-plugin-webfont-dl": "^3.9.4"
   },
   "dependencies": {
     "@radix-ui/react-toggle": "^1.0.3",
