--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "framer-motion": "^11.0.27",
     "lucide-react": "^0.366.0",
+    "nanoid": "^5.0.7",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-use": "^17.5.0",
