--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.1",
+    "vite-imagetools": "^7.0.2",
     "vite-plugin-shopify": "^3.0.0",
     "vite-plugin-webfont-dl": "^3.9.4"
   },
