modify customers-data app-proxy explainer txt,

--- a/assets/.vite/manifest.json
+++ b/assets/.vite/manifest.json
@@ -436,7 +436,7 @@
     ]
   },
   "frontend/entrypoints/react/index.jsx": {
-    "file": "index.zWR9OJS8.min.js",
+    "file": "index.o4dyPagO.min.js",
     "src": "frontend/entrypoints/react/index.jsx",
     "isEntry": true,
     "imports": [
